@@ -62,6 +62,7 @@
     <Compile Include="Interop\Linux\Interop.Linux.stat.cs" />
     <Compile Include="Interop\FreeBSD\Interop.FreeBSD.Errors.cs" />
     <Compile Include="Interop\FreeBSD\Interop.FreeBSD.Libraries.cs" />
+    <Compile Include="Interop\FreeBSD\Interop.FreeBSD.uname.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
