@@ -1,6 +1,12 @@
 2015-05-03  Natalia Portillo  <claunia@claunia.com>
 
 	* Claunia.IO.csproj:
+	* Interop/FreeBSD/Interop.FreeBSD.uname.cs:
+	  Implement FreeBSD's uname(3)
+
+2015-05-03  Natalia Portillo  <claunia@claunia.com>
+
+	* Claunia.IO.csproj:
 	* Interop/FreeBSD/Interop.FreeBSD.Errors.cs:
 	* Interop/FreeBSD/Interop.FreeBSD.Libraries.cs:
 	  Add FreeBSD libc and errno.
